--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install texlive texlive-science texlive-latex-extra texlive-bibtex-extra texlive-fonts-extra
+        sudo add-apt-repository ppa:malteworld/ppa
+        sudo apt update
         sudo apt-get install pdftk
         pip install matplotlib
         ./scripts/travis_miniconda.sh
