github ci, try #4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,13 @@ jobs:
         sudo add-apt-repository ppa:malteworld/ppa
         sudo apt update
         sudo apt-get install pdftk
-        pip install matplotlib
-        ./scripts/travis_miniconda.sh
+        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+        bash miniconda.sh -b -p $HOME/miniconda
+        export PATH="$HOME/miniconda/bin:$PATH"
+        hash -r
+        conda config --set always_yes yes --set changeps1 no
+        conda update -q conda
+        conda info -a
         PATH="$HOME/miniconda/bin:$PATH"
         conda env create -f configurations/environment.yml
         source activate teaching-talks 
