--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         sudo apt update
         sudo apt-get install pdftk 
     - name: create conda env
-    - uses: goanpeca/setup-miniconda@v1.0.2
+      uses: goanpeca/setup-miniconda@v1.0.2
       with:
            activate-environment: teaching-talks
            environment-file: configurations/example-environment.yml
