--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: conda-incubator/setup-miniconda@v2
       with:
-           activate-environment: test-teach
+           activate-environment: teaching-talks
            environment-file: configurations/test.yml
            python-version: 3.7
            auto-activate-base: false
